--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "start": "node server.js",
     "lint": "eslint **/*.js --quiet",
     "fix": "eslint --fix .",
-    "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit"
+    "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit",
+    "watch": "nodemon server.js",
+    "reset-db": "node server reset-db"
   },
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "find-hashtags": "^1.0.1",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
