--- a/config/config.json
+++ b/config/config.json
@@ -6,6 +6,13 @@
     "host": "localhost",
     "dialect": "mysql"
   },
+  "development2": {
+    "username": "nyvhnqrtiavd4zo6",
+    "password": "zzfc0qbu37pi5sj0",
+    "database": "zx1irwmdt27mkvgz",
+    "host": "pfw0ltdr46khxib3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "dialect": "mysql"
+  },
   "test": {
     "username": "root",
     "password": null,
