--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express-handlebars": "^3.0.0",
     "find-hashtags": "^1.0.1",
     "lodash-core": "^0.8.1",
+    "moment": "^2.22.2",
     "mysql2": "^1.5.3",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "urldecode": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
