--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt-nodejs": "0.0.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -21,6 +22,8 @@
     "lodash-core": "^0.8.1",
     "moment": "^2.22.2",
     "mysql2": "^1.5.3",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.38.0",
     "urldecode": "^1.0.1"
   },
