--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Project 2 Starter",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
     "lint": "eslint **/*.js --quiet",
     "fix": "eslint --fix .",
     "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit",
-    "watch": "nodemon server.js",
-    "reset-db": "node server reset-db"
+    "watch": "cross-env NODE_ENV=development nodemon server.js",
+    "reset-db": "cross-env NODE_ENV=development node server.js reset-db"
   },
   "license": "ISC",
   "dependencies": {
@@ -18,6 +18,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "find-hashtags": "^1.0.1",
     "lodash-core": "^0.8.1",
     "moment": "^2.22.2",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
