fixed many to many associations.  Aded filter by tag functionality

--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,8 @@
     "password": "root",
     "database": "branches_db",
     "host": "localhost",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "test": {
     "username": "root",
