--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "watch-mac": "cross-env NODE_ENV=development-mac nodemon server.js",
     "watch-pc": "cross-env NODE_ENV=development-pc nodemon server.js",
     "reset-db-mac": "cross-env NODE_ENV=development-mac node server.js reset-db",
-    "reset-db-pc": "cross-env NODE_ENV=development-pc node server.js reset-db"
+    "reset-db-pc": "cross-env NODE_ENV=development-pc node server.js reset-db",
+    "debug-pc": "cross-env NODE_ENV=development-pc nodemon --inspect server.js reset-db"
   },
   "license": "ISC",
   "dependencies": {
